[KDP-2129] upload image rating - enhance meta response
